[package]
name = "ripper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
harper-brill = { version = "0.56.0", path = "../harper/harper-brill" }
harper-core = { version = "0.56.0", path = "../harper/harper-core" }
rand = "0.9.2"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = "0.27.2"
