[package]
name = "ripper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
harper-brill = "0.57.0"
harper-core = { version = "0.57.0", features = ["concurrent"] }
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
smallvec = "1.15.1"
strum = "0.27.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
